<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_size_large"
            android:layout_margin="16dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/transparent_green_background">

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="true"
                android:background="@null"
                android:padding="@dimen/margin_small"
                android:drawableStart="@drawable/ic_baseline_email_green"
                android:drawablePadding="@dimen/margin_small"
                android:hint="@string/email_"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/transparent_green_background">

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="true"
                android:padding="@dimen/margin_small"
                android:hint="@string/password_"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:background="@null"
                android:inputType="textPassword"
                tools:ignore="LabelFor" />

        </FrameLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/PrimaryButton"
            android:text="@string/login"
            android:textSize="@dimen/text_size_default"
            android:background="@drawable/primary_button"/>

    </LinearLayout>
</layout>
