<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginVertical="@dimen/margin_small"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_default"
            android:src="@drawable/ic_profile_image_placeholder"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Change Photo"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_gravity="center_horizontal" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/farmer_name"
                    android:layout_marginTop="@dimen/margin_default"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:padding="@dimen/margin_small"
                    android:background="@drawable/transparent_green_background">

                    <EditText
                        android:id="@+id/farmer_name_editTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/farmer_name"
                        android:background="@null"
                        android:layout_gravity="center_vertical"
                        android:inputType="text"
                        android:autofillHints="@string/farmer_name" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/farmer_name"
                    android:layout_marginTop="@dimen/margin_default"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:padding="@dimen/margin_small"
                    android:background="@drawable/transparent_green_background">

                    <EditText
                        android:id="@+id/farmer_surname_editTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/surname"
                        android:background="@null"
                        android:layout_gravity="center_vertical"
                        android:inputType="text"
                        android:autofillHints="@string/surname" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/farmer_location"
                    android:layout_marginTop="@dimen/margin_default"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:padding="@dimen/margin_small"
                    android:background="@drawable/transparent_green_background">

                    <EditText
                        android:id="@+id/farmer_location_editTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/farmer_location"
                        android:layout_gravity="center_vertical"
                        android:inputType="text"
                        android:autofillHints="@string/farmer_location" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/farmer_state"
                    android:layout_marginTop="@dimen/margin_default"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:padding="@dimen/margin_small"
                    android:background="@drawable/transparent_green_background">

                    <EditText
                        android:id="@+id/farmer_state_editTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/farmer_state"
                        android:inputType="text"
                        android:layout_gravity="center_vertical"
                        android:autofillHints="@string/farmer_state" />
                </FrameLayout>

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:layout_marginTop="@dimen/margin_default"
                    style="@style/PrimaryButton"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>
</layout>
